{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 48,
  "lineage": "e349382c-c12c-22eb-c549-7763e2b8230f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1",
            "internal_domain_name_suffix": "xfqhyriuexcu1cat2owqvgigvg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myipconfiguration1",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip1",
                "subnet_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic1",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic2",
            "internal_domain_name_suffix": "xfqhyriuexcu1cat2owqvgigvg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myipconfiguration2",
                "primary": true,
                "private_ip_address": "10.0.1.11",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip2",
                "subnet_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic2",
            "private_ip_address": "10.0.1.11",
            "private_ip_addresses": [
              "10.0.1.11"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp2",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3",
            "internal_domain_name_suffix": "xfqhyriuexcu1cat2owqvgigvg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myipconfiguration3",
                "primary": true,
                "private_ip_address": "10.0.1.12",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip3",
                "subnet_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic3",
            "private_ip_address": "10.0.1.12",
            "private_ip_addresses": [
              "10.0.1.12"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet3",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myNic4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic4",
            "internal_domain_name_suffix": "xfqhyriuexcu1cat2owqvgigvg.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myipconfiguration4",
                "primary": true,
                "private_ip_address": "10.0.1.13",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip4",
                "subnet_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet"
              }
            ],
            "location": "westeurope",
            "name": "vmnic4",
            "private_ip_address": "10.0.1.13",
            "private_ip_addresses": [
              "10.0.1.13"
            ],
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_public_ip.myPublicIp4",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet4",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1|/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "network_interface_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic1",
            "network_security_group_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic"
          },
          "dependencies": [
            "azurerm_network_interface.myNic1",
            "azurerm_network_security_group.mySecGroup",
            "azurerm_public_ip.myPublicIp1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociation3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3|/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "network_interface_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkInterfaces/vmnic3",
            "network_security_group_id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic"
          },
          "dependencies": [
            "azurerm_network_interface.myNic3",
            "azurerm_network_security_group.mySecGroup3",
            "azurerm_public_ip.myPublicIp3",
            "azurerm_resource_group.rg",
            "azurerm_subnet.mySubnet3",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mySecGroupAssociation4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mySecGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "location": "westeurope",
            "name": "sshtraffic",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mySecGroup3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/networkSecurityGroups/sshtraffic",
            "location": "westeurope",
            "name": "sshtraffic",
            "resource_group_name": "kubernetes_rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIp1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip1",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip2",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIp3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip3",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip3",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myPublicIp4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/publicIPAddresses/vmip4",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "vmip4",
            "resource_group_name": "kubernetes_rg",
            "sku": "Basic",
            "tags": {
              "environment": "CP2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mySubnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
            "name": "terraformsubnet",
            "resource_group_name": "kubernetes_rg",
            "virtual_network_name": "kubernetesnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.myNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "457c60b9-2514-4dc5-8813-e3ad0a9906ae",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet",
            "location": "westeurope",
            "name": "kubernetesnet",
            "resource_group_name": "kubernetes_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
                "name": "terraformsubnet"
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "457c60b9-2514-4dc5-8813-e3ad0a9906ae",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet",
            "location": "westeurope",
            "name": "kubernetesnet",
            "resource_group_name": "kubernetes_rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet/subnets/terraformsubnet",
                "name": "terraformsubnet"
              }
            ],
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "b75c854f-2b43-4dc8-90f0-7a2d8c849f51",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet3",
            "location": "westeurope",
            "name": "kubernetesnet3",
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myNet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "c60c4191-7c60-45e6-aeb0-980446074f0b",
            "id": "/subscriptions/bca86a46-059e-45f5-ba6d-4a75bf90450d/resourceGroups/kubernetes_rg/providers/Microsoft.Network/virtualNetworks/kubernetesnet4",
            "location": "westeurope",
            "name": "kubernetesnet4",
            "resource_group_name": "kubernetes_rg",
            "tags": {
              "environment": "CP2"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}